2008-11-15  Jesse Jones  <jesjones@mindspring.com>

	* options.make: Release and debug now use -checked+.

2008-11-14  Jesse Jones  <jesjones@mindspring.com>

	* options.make: Added to allow all of our assemblies to be built with
	a common set of gmcs options
	* Makefile.am: Added new DEBUG variable to help target.

2008-11-11  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyStaticInfo.cs: Update "special" (VS setup) version 2.3

2008-11-09  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Old xml.in files were removed from SVN so there's no
	need to clean the xml files anymore.

2008-11-09  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* README: More info.

2008-11-09  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* TODO:
	* README: Correcting broken link to Roadmap.

2008-11-08  Sebastien Pouliot  <sebastien@ximian.com>

	* NEWS: Update information and date before 2.2 branch.

2008-11-07  Sebastien Pouliot  <sebastien@ximian.com>

	* self-test.ignore: Add entry for NDesk.Options.OptionValueType wrt
	Gendarme.Rules.Serialization.MarkEnumerationsAsSerializableRule

2008-11-08  Cedric Vivier  <cedricv@neonux.com>

	* NEWS: Add just landed AvoidRedundancyInTypeNameRule to new rules list.

2008-11-07  Alan McGovern  <amcgovern@novell.com>

	* gendarme.sln: Activate makefile integration for all the rules
	projects. Remove the old mdp files as they are no longer needed.

2008-11-03  Cedric Vivier  <cedricv@neonux.com>

	* NEWS: Add just landed AvoidRedundancyInMethodNameRule to new rules list.

2008-11-02  Sebastien Pouliot  <sebastien@ximian.com>

	* NEWS: Update before 2.2 branch.

2008-11-02  Jesse Jones  <jesjones@mindspring.com>

	* Makefile.am: Added test1 and help targets. test1 builds just enough
	to run a single rule test dll and runs a single text fixture in the dll
	(using a TEST1 variable).

2008-10-31  Sebastien Pouliot  <sebastien@ximian.com>

	* gendarme-wizard.desktop: Moved into swf-wizard-runner directory